Bug #17005  	Ndb partition handling for create table like is broken